[workspace]
resolver = "2"

members  = [
    "pavenet",
    "pavenet-core",
    "pavenet-input",
    "pavenet-engine",
    "pavenet-models",
    "pavenet-output",
    "pavenet-recipe",
]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
debug = true