[workspace]
resolver = "2"
members = [
    "crates/*",
]

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
opt-level = 3

[profile.release_opt]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.release.package."*"]
opt-level = 3
