[workspace]
resolver = "2"
members = [
    "crates/lib/*",
    "crates/bin/*"
]

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
hashbrown = "0.15.2"
typed-builder = "0.20.0"
log = "0.4.22"
parquet = "54.0.0"
arrow = "54.0.0"
burn = "0.15.0"
chrono = "0.4.39"
clap = "4.5.23"
crossterm = "0.28.1"
csv = "1.3.1"
env_logger = "0.11.6"
indexmap = "2.7.0"
itertools = "0.13.0"
keyed_priority_queue = "0.4.2"
kiddo = "5.0.3"
log4rs = "1.3.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
ratatui = "0.29.0"
serde_with = "3.12.0"
tikv-jemallocator = "0.6.0"
toml = "0.8.19"
uuid = "1.11.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
opt-level = 3

[profile.release_opt]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.release.package."*"]
opt-level = 3
