[package]
name = "pavenet-config"
version = "0.0.1"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
serde = "1.0.188"
serde_derive = "1.0.188"
log4rs = "1.2.0"
log = "0.4.20"
hashbrown = "0.14.0"
toml = "0.8.0"
serde_with = "3.3.0"