[package]
name = "pavenet-engine"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
krabmaga = { version = "0.4.1", path= "../../krABMaga" }
typed-builder = "0.17.0"

[features]
visualization = ["krabmaga/visualization"]