[package]
name = "pavenet-engine"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
krabmaga = { version = "0.4.1", path= "../../krABMaga" }
typed-builder = "0.18.0"
hashbrown = "0.14.3"
anyhow = "1.0.75"
serde = { version = "1.0.190", features = ["derive"] }
uuid = { version = "1.6.1", features = ["fast-rng", "v4"] }

[features]
visualization = ["krabmaga/visualization"]