[package]
name = "pavenet-input"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
pavenet-core = { path = "../pavenet-core" }
pavenet-engine = { path = "../pavenet-engine" }
hashbrown = "0.14.1"
typed-builder = "0.17.0"

[dependencies.polars]
version = "0.33.2"
features = ["parquet", "lazy", "performant"]