[package]
name = "pavenet-io"
version = "0.0.1"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
toml = "0.8.0"
hashbrown = "0.14.0"
polars-core = "0.33.2"
polars-io = "0.33.2"

[dependencies.polars]
version = "0.33.2"
features = ["parquet", "lazy", "performant"]