[package]
name = "pavenet-io"
version = "0.0.1"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
krabmaga = { version = "0.4.1", path= "../../krABMaga" }
pavenet-core = { path = "../pavenet-core" }
pavenet-config = { path = "../pavenet-config" }
hashbrown = "0.14.1"
log = "0.4.20"
polars-core = "0.33.2"
polars-io = "0.33.2"
typed-builder = "0.16.2"

[dependencies.polars]
version = "0.33.2"
features = ["parquet", "lazy", "performant"]