[package]
name = "pavenet-models"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
pavenet-recipe = { version = "0.0.0", path= "../pavenet-recipe" }
pavenet-input = { version = "0.0.0", path= "../pavenet-input" }
pavenet-engine = { version = "0.0.0", path= "../pavenet-engine" }
rand = "0.8.5"
log4rs = "1.2.0"
log = "0.4.20"
hashbrown = "0.14.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_with = "3.4.0"
typed-builder = "0.17.0"