[package]
name = "pavenet-node"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
pavenet-core = { version = "0.0.0", path= "../pavenet-core" }
pavenet-engine = { version = "0.0.0", path= "../pavenet-engine" }
pavenet-input = { version = "0.0.0", path= "../pavenet-input" }
log4rs = "1.2.0"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_with = "3.4.0"
typed-builder = "0.18.0"