[package]
name = "advaitars-models"
version = "0.0.0"
edition = "2021"

[dependencies]
advaitars-core = { path = "../advaitars-core" }
advaitars-engine = { path = "../advaitars-engine" }
serde = { version = "1.0.196", features = ["derive"] }
typed-builder = "0.18.1"
log = "0.4.20"
rand = "0.8.5"
serde_with = "3.6.0"

