[package]
name = "advaitars"
version = "0.0.1"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
advaitars-core = { version = "0.0.0", path= "../advaitars-core" }
advaitars-engine = { version = "0.0.0", path= "../advaitars-engine" }
advaitars-input = { version = "0.0.0", path= "../advaitars-input" }
advaitars-output = { version = "0.0.0", path= "../advaitars-output" }
advaitars-node = { version = "0.0.0", path= "../advaitars-node" }
advaitars-models = { version = "0.0.0", path= "../advaitars-models" }
krabmaga = { version = "0.4.1", path= "../../../krABMaga" }
toml = "0.8.9"
rand = "0.8.5"
log4rs = "1.2.0"
log = "0.4.20"
itertools = "0.12.0"
clap = {version = "4.4.18", features = ["derive"]}
typed-builder = "0.18.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_with = "3.6.0"

[features]
headless = []
visualization = ["krabmaga/visualization"]
visualization_wasm = ["krabmaga/visualization_wasm"]