[package]
name = "disolv-core"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
typed-builder = "0.18.2"
hashbrown = "0.14.4"
indexmap = "2.2.6"
ratatui = "0.26.1"
crossterm = "0.27.0"
keyed_priority_queue = "0.4.2"
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
log = "0.4.22"
rand = "0.8.5"
