[package]
name = "disolv-device"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
disolv-core = { version = "0.0.0", path = "../disolv-core" }
disolv-models = { version = "0.0.0", path = "../disolv-models" }
disolv-input = { version = "0.0.0", path = "../disolv-input" }
disolv-output = { version = "0.0.0", path = "../disolv-output" }
log = "0.4.22"
rand = "0.8.5"
typed-builder = "0.18.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.8.3"
