[package]
name = "disolv-input"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
disolv-core = { path = "../disolv-core" }
disolv-models = { path = "../disolv-models" }
typed-builder = "0.18.1"
log = "0.4.20"
parquet = "50.0.0"
arrow-array = "50.0.0"
