[package]
name = "disolv-input"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"

[dependencies]
disolv-core = { path = "../disolv-core" }
disolv-models = { path = "../disolv-models" }
typed-builder = "0.18.2"
log = "0.4.22"
parquet = "52.1.0"
arrow-array = "52.1.0"
