[package]
name = "disolv-links"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "disolv-links"
path = "src/main.rs"

[dependencies]
disolv-models = { path = "../disolv-models" }
disolv-core = { path = "../disolv-core" }
disolv-input = { path = "../disolv-input" }
disolv-ui = { path = "../disolv-ui" }
parquet = "50.0.0"
arrow = "50.0.0"
hashbrown = "0.14.3"
sqlite = "0.33.0"
crossterm = "0.27.0"
ratatui = "0.26.1"
toml = "0.8.10"
kiddo = { path = "../../../kiddo" }
clap = { version = "4.5.2", features = ['derive'] }
log = "0.4.21"
log4rs = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.6.1"
