[package]
name = "disolv-output"
version = "0.0.0"
edition = "2021"

[dependencies]
disolv-core = { path = "../disolv-core" }
disolv-models = { path = "../disolv-models" }
serde = { version = "1.0.198", features = ["derive"] }
csv = "1.3.0"
typed-builder = "0.18.2"
log = "0.4.21"
parquet = "51.0.0"
arrow = "51.0.0"
rerun = {version = "0.15.1", optional = true}

[features]
rerun = ["dep:rerun"]

