[package]
name = "disolv"
version = "0.0.2"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
disolv-core = { version = "0.0.0", path = "../disolv-core" }
disolv-input = { version = "0.0.0", path = "../disolv-input" }
disolv-output = { version = "0.0.0", path = "../disolv-output" }
disolv-device = { version = "0.0.0", path = "../disolv-device" }
disolv-models = { version = "0.0.0", path = "../disolv-models" }
toml = "0.8.14"
rand = "0.8.5"
indexmap = "2.2.6"
tikv-jemallocator = "0.5.4"
log4rs = "1.3.0"
log = "0.4.22"
itertools = "0.13.0"
clap = { version = "4.5.9", features = ["derive"] }
typed-builder = "0.18.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.8.3"
