[package]
name = "pavenet-node"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
pavenet-core = { version = "0.0.0", path= "../pavenet-core" }
pavenet-engine = { version = "0.0.0", path= "../pavenet-engine" }
pavenet-models = { version = "0.0.0", path= "../pavenet-models" }
pavenet-input = { version = "0.0.0", path= "../pavenet-input" }
pavenet-output = { version = "0.0.0", path= "../pavenet-output" }
log4rs = "1.2.0"
log = "0.4.20"
rand = "0.8.5"
typed-builder = "0.18.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_with = "3.4.0"
