[package]
name = "pavenet-output"
version = "0.0.0"
edition = "2021"

[dependencies]
pavenet-core = { path = "../pavenet-core" }
pavenet-engine = { path = "../pavenet-engine" }
pavenet-models = { path = "../pavenet-models" }
krabmaga = { version = "0.4.1", path= "../../../krABMaga" }
serde = { version = "1.0.195", features = ["derive"] }
polars = { version = "0.35.4", features = ["lazy"] }
polars-io = { version = "0.35.4", features = ["parquet"] }
csv = "1.3.0"
typed-builder = "0.18.0"
log = "0.4.20"