[package]
name = "pavenet-output"
version = "0.0.0"
edition = "2021"

[dependencies]
pavenet-core = { path = "../pavenet-core" }
pavenet-engine = { path = "../pavenet-engine" }
pavenet-models = { path = "../pavenet-models" }
krabmaga = { version = "0.4.1", path= "../../../krABMaga" }
serde = { version = "1.0.196", features = ["derive"] }
csv = "1.3.0"
typed-builder = "0.18.1"
log = "0.4.20"