[package]
name = "disolv-core"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
typed-builder.workspace = true
hashbrown.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["fast-rng", "v4"] }
rand.workspace = true
keyed_priority_queue.workspace = true
indexmap.workspace = true

[dev-dependencies]
disolv-testutils = { path = "../disolv-testutils" }
