[package]
name = "disolv-input"
version = "0.0.0"
authors = [
    "Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"
]
edition = "2021"
license = "MIT"

[dependencies]
disolv-core = { path = "../disolv-core" }
disolv-models = { path = "../disolv-models" }
hashbrown.workspace = true
log.workspace = true
serde.workspace = true
typed-builder.workspace = true
parquet.workspace = true
arrow.workspace = true
