[package]
name = "disolv-models"
version = "0.0.0"
edition = "2021"

[dependencies]
disolv-core = { path = "../disolv-core" }
hashbrown.workspace = true
log.workspace = true
serde.workspace = true
typed-builder.workspace = true
rand_distr.workspace = true
rand_pcg.workspace = true
parquet.workspace = true
arrow.workspace = true